# china-invoice-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
scripts/: build_dist.sh  check.sh  format.sh  install_hermes_skill.sh  parse_invoice.py  release.sh  verify_hermes_install.sh
specs/: README.md  release-0.1.0.md  result-schema-v1.json
src/china_invoice_parser/: __init__.py  cli.py  fields.py  format_result.py  models.py  ocr_extract.py  ofd_extract.py  ofd_verify.py  parser.py  pdf_extract.py  pdf_verify.py
tests/: helpers.py  test_fields.py  test_ocr.py  test_parser.py  test_pdf_verify.py  test_release_contract.py  test_result_schema.py
tests/fixtures/: README.md  build_samples.py
tests/fixtures/ofd/: sanitized_vat_invoice.ofd
