[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-invoice-parser"
version = "0.1.0"
description = "Python-first parser for Chinese PDF/OFD invoices with field extraction and signature verification hooks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mac" }
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.2.0"]
sign = ["pyHanko>=0.24.0"]
dev = ["jsonschema>=4.23.0", "pytest>=8.0.0"]

[project.scripts]
china-invoice-parser = "china_invoice_parser.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
